src_old/objects/AppLocker__c.object
<CustomObject>
    <description>application locker</description>
    <fields>
        <fullName>ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestorId__c</fullName>
        <label>Requestor</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>request token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>AppLocker</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AppLocker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppLockers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>